--- a/templates/server/server.ini.j2
+++ b/templates/server/server.ini.j2
@@ -1,6 +1,13 @@
+[network]
+server_port = {{ dst_server_port }}
+
+[steam]
+authentication_port = 10997
+master_server_port = 10996
+
 [shard]
+name = {{ dst_shard_name }}
 is_master = {{ dst_shard_is_master | lower }}
 {% if dst_shard_id %}
 id = {{ dst_shard_id }}
 {% endif %}
-
