Overworld and cave servers now both start, and connect, but traversing the portal gets the player kicked out instead of migrated.

--- a/templates/server/cluster.ini.j2
+++ b/templates/server/cluster.ini.j2
@@ -22,7 +22,7 @@ vote_enabled = {{ dst_enable_vote_kick | lower }}
 console_enabled = {{ dst_console_enabled | lower }}
 
 [shard]
-master_port = {{ dst_master_server_port }}
+master_port = {{ dst_master_port }}
 shard_enabled = {{ dst_shard_enable | lower }}
 cluster_key = {{ dst_shard_cluster_key }}
 {% if dst_shard_master_ip %}
