Cronjob:  Stop and start all DST instances.  Defaults:  Fixed some ports.  Portals between worlds now work, although I don't know how to make a caves world.

--- a/templates/bin/update_dontstarvetogether_cronjob.j2
+++ b/templates/bin/update_dontstarvetogether_cronjob.j2
@@ -1,7 +1,11 @@
 #!/bin/bash
 
-service dst-{{ game_name }} stop
+for service in /etc/init.d/dst-*; do
+  $service stop
+done
 
 sudo -u steam /usr/local/bin/update_dontstarvetogether
 
-service dst-{{ game_name }} start
+for service in /etc/init.d/dst-*; do
+  $service start
+done
