--- a/templates/server/worldgenoverride.lua.j2
+++ b/templates/server/worldgenoverride.lua.j2
@@ -1,4 +1,4 @@
 return {
     override_enabled = true,
-    preset = {{ dst_world_preset }}, --  or "SURVIVAL_TOGETHER" or "SURVIVAL_TOGETHER_CLASSIC" or "SURVIVAL_DEFAULT_PLUS" or "COMPLETE_DARKNESS" or "DST_CAVE"
+    preset = {{ dst_world_preset }},
 }
